--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.1/dist/aframe-extras.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-  <link rel="icon" type="image/png" href="https://cdn.glitch.global/1765ff47-5e85-4c40-9872-99e318a4f9e4/mid_button.png?v=1658693626988">
+  <link rel="icon" type="image/png" href="https://github.com/panjiangJiang9/3sip-english-breakfast/blob/main/assets/mid_button.png">
   <script src="script.js"></script>
   <link href="style.css" rel="stylesheet">
   <body style="margin : 0px; overflow: hidden;">
@@ -18,7 +18,7 @@
       </button>
       <button id="mid-button" class="say-hi-button" >
         <div>
-          <img src="https://cdn.glitch.global/1765ff47-5e85-4c40-9872-99e318a4f9e4/mid_button.png?v=1658693626988">
+          <img src="https://github.com/panjiangJiang9/3sip-english-breakfast/blob/main/assets/mid_button.png">
         </div>
       </button>
       <button id="right-button" class="say-hi-button" >
@@ -40,7 +40,7 @@
        <!-- <a-asset-item id="lemon" 
                       src="https://cdn.glitch.me/1765ff47-5e85-4c40-9872-99e318a4f9e4/lemongrass.glb?v=1657979895725" response-type="arraybuffer" crossorigin="anonymous"></a-asset-item>
         -->
-        <a-asset-item id="flower" src="https://cdn.glitch.global/1765ff47-5e85-4c40-9872-99e318a4f9e4/cute%20flower%20test.glb?v=1658082605693"
+        <a-asset-item id="flower" src="https://github.com/panjiangJiang9/3sip-english-breakfast/blob/main/assets/tea.glb"
         response-type="arraybuffer" crossorigin="anonymous"></a-asset-item>
         
         <!--<img id="img1" src="https://cdn.glitch.global/1765ff47-5e85-4c40-9872-99e318a4f9e4/puydesancy.jpg?v=1658353465821">
