--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
        <!-- <a-asset-item id="lemon" 
                       src="https://cdn.glitch.me/1765ff47-5e85-4c40-9872-99e318a4f9e4/lemongrass.glb?v=1657979895725" response-type="arraybuffer" crossorigin="anonymous"></a-asset-item>
         -->
-        <a-asset-item id="flower" src="https://github.com/panjiangJiang9/3sip-english-breakfast/blob/main/assets/tea.glb"
+        <a-asset-item id="flower" src="./assets/tea.glb"
         response-type="arraybuffer" crossorigin="anonymous"></a-asset-item>
         
         <!--<img id="img1" src="https://cdn.glitch.global/1765ff47-5e85-4c40-9872-99e318a4f9e4/puydesancy.jpg?v=1658353465821">
