--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     
     <a-scene id="myscene" embedded arjs device-orientation-permission-ui="enabled:false" vr-mode-ui="enabled: false">
       <a-assets>
-        <a-asset-item id="flower" src="./assets/test.glb"
+        <a-asset-item id="flower" src="./assets/tea.glb"
         response-type="arraybuffer" crossorigin="anonymous"></a-asset-item>
      </a-assets>
       
